# osc_haritorax2_camera_tracking

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  QUICKSTART.md  README.md  TODOS.md  build_exe.py  entry_main.py  entry_tools.py  pyproject.toml  設計書.md
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: config.yml  device-compat.yml
.github/workflows/: ci.yml
config/: default.json
docs/: ble-direct-guide.md  e2e-test-checklist.md  haritora-protocol.md  haritora-setup-guide.md  other-trackers.md  serial-direct-guide.md  slimevr-setup-guide.md
src/osc_tracking/: __init__.py  autostart.py  ble_receiver.py  body_proportions.py  bvh_exporter.py  camera_protocol.py  camera_tracker.py  complementary_filter.py  config.py  data_exporter.py  discord_presence.py  fusion_engine.py  gesture_detector.py  hotkeys.py  main.py  motion_smoothing.py  notifications.py  obs_overlay.py  osc_receiver.py  osc_remapper.py  osc_sender.py  paths.py  pose_predictor.py  preflight.py  profiler.py  quality_meter.py  receiver_base.py  receiver_protocol.py  recorder.py  rest_api.py  serial_receiver.py  simulator.py  skeleton_viewer.py  state_machine.py  stereo_calibration.py  tracker_mapping.py  visual_compass.py  vmc_sender.py  web_dashboard.py
src/osc_tracking/application/: __init__.py  event_bus.py
src/osc_tracking/domain/: __init__.py  bones.py  events.py  modes.py  skeleton.py  values.py
src/osc_tracking/persistence/: __init__.py  calibration_repo.py  protocols.py
src/osc_tracking/tools/: benchmark.py  ble_scan.py  calibrate.py  connection_check.py  download_model.py  generate_checkerboard.py  osc_monitor.py  preview.py  setup_wizard.py  (+1 more)
tests/: test_benchmark.py  test_ble_receiver.py  test_bvh_exporter.py  test_camera_tracker.py  test_complementary_filter.py  test_config.py  test_domain_skeleton.py  test_domain_values.py  test_events_and_bus.py  test_fusion_engine.py  test_motion_smoothing.py  test_multiview_calibration.py  test_notifications.py  test_obs_overlay.py  test_osc_receiver.py  test_osc_sender.py  test_paths.py  test_persistence_protocols.py  test_pose_predictor.py  test_preflight.py  test_profiler.py  test_receiver_base.py  test_recorder.py  test_rest_api.py  test_security_fixes.py  test_serial_receiver.py  test_setup_wizard.py  test_state_machine.py  test_stereo_calibration.py  test_tracker_mapping.py  test_vision_provider.py  test_visual_compass.py  test_vmc_sender.py
